--- a/25.12/人工智能导论.md
+++ b/25.12/人工智能导论.md
@@ -1,1 +1,20 @@
+# 人工智能导论
 
+## 一.导论
+### 1.什么是人工智能
+
+Nilsson认为“AI是关于知识的科学，即怎样表示知识、获取知识和使用知识的科学”（知识）<br/>
+Winston则认为“AI是研究如何使计算机去做过去只有人才能做的富有智能的工作”（功能）<br/>
+Feigenbaum认为“AI是一个智能计算机的知识处理系统，该系统显示人类行为中与智能有关的某些特征”（系统）<br/>
+
+定义1:  人工智能是一门研究如何使计算机系统显示智能行为的学科，即研究如何让计算机完成那些过去只有人才能做的富有智能的工作。<br/>
+定义2:  人工智能是研究如何制造出人造的智能机器或智能系统，来模拟人类智能活动的能力，以延伸人们智能的科学。<br/>
+定义3:  AI 是使计算机像人一样思考、行动或能够进行理性地思考、行动的技术。<br/>
+
+简而言之。<br/>
+
+人工智能：即Artificial Intelligence，简称AI，它的基本含义是让计算机模仿人脑去完成一些需要智能的工作。<br/>
+计算机：主要功能是计算，也就是数据或信息的处理。<br/>
+信息-知识-智能：信息经过抽象、结晶，转化为知识；信息经过提炼、升华，转化为智能；4智能经过发挥、使用，促进信息化的发展。<br/>
+
+### 2.什么是智能？
