--- a/25.12/操作系统原理.md
+++ b/25.12/操作系统原理.md
@@ -8,10 +8,33 @@
 软件包含两部分：应用软件和系统软件。<br/>
 系统软件包含两部分：操作系统和编译软件、汇编软件、数据库管理系统等支撑软件（帮助应用软件被编译或高效运行）。<br/>
 
-他们之间有如下的抽象关系：
-应用软件|
-————————
-支撑软件&
+他们之间有如下的抽象关系：<br/>
 
+&emsp;应用软件&emsp;|<br/>
+——————<br/>
+&emsp;&emsp;支撑软件&emsp;&emsp;|<br/>
+————————<br/>
+&emsp;&emsp;&emsp;操作系统&emsp;&emsp;&emsp;|<br/>
+——————————<br/>
+&emsp;&emsp;&emsp;&emsp;计算机硬件&emsp;&emsp;&emsp;&emsp;|<br/>
+—————————————<br/>
+
+地位：操作系统紧贴计算机硬件之上，所有其他软件之下，是各种软件的基础运行平台。<br/>
+
+### 2.作用
+OS的核心目标是高效管理硬件资源，为用户和应用程序提供稳定、安全、易用的运行环境。<br/>
+
+抽象/易用性：将复杂的硬件操作封装成简单、一致的抽象（如“文件”、“进程”），提供统一的设备访问接口，隐藏各设备细节，让程序员和用户无需关心底层细节。<br/>
+高性能：让硬件资源（特别是CPU和内存）得到最充分、最合理的利用，减少空闲和浪费。<br/>
+公平性：在多个竞争资源的程序（进程）之间进行合理调度（如CPU时间片轮转），保证每个任务都有机会运行，防止某个程序独占资源。<br/>
+稳定性：防止一个程序的错误（如非法内存访问）导致整个系统崩溃。<br/>
+安全性：对公共系统资源访问提供保护、竞争等功能，对出现的各种错误进行响应、报告。<br/>
+
+### 3.定义
+操作系统是一组系统软件的集合，它作为计算机硬件和应用软件/用户之间的中介，管理和控制计算机系统的所有硬件与软件资源，并为用户和应用程序提供一个高效、稳定、安全的运行环境。<br/>
+
+资源，指的是 计算机系统中任何有限的、并且能够被请求、分配、使用和释放的实体。
+硬件资源是物理意义上存在的计算机组件，包括硬盘、内存等。
+软件资源
 
 
