--- a/25.12/操作系统原理.md
+++ b/25.12/操作系统原理.md
@@ -33,8 +33,8 @@ OS的核心目标是高效管理硬件资源，为用户和应用程序提供稳
 ### 3.定义
 操作系统是一组系统软件的集合，它作为计算机硬件和应用软件/用户之间的中介，管理和控制计算机系统的所有硬件与软件资源，并为用户和应用程序提供一个高效、稳定、安全的运行环境。<br/>
 
-资源，指的是 计算机系统中任何有限的、并且能够被请求、分配、使用和释放的实体。
-硬件资源是物理意义上存在的计算机组件，包括硬盘、内存等。
-软件资源
+资源，指的是 计算机系统中任何有限的、并且能够被请求、分配、使用和释放的实体。它们有限、可竞争、可管理。<br/>
+硬件资源是物理意义上存在的计算机组件，包括硬盘、内存等。<br/>
+软件资源是由操作系统内核创建和维护的、用于支持程序运行的逻辑实体，如消息队列、信号量等。它们物理意义上不存在，但也占据一定的硬件资源。<br/>
 
 
