--- a/25.12/操作系统原理.md
+++ b/25.12/操作系统原理.md
@@ -37,4 +37,13 @@ OS的核心目标是高效管理硬件资源，为用户和应用程序提供稳
 硬件资源是物理意义上存在的计算机组件，包括硬盘、内存等。<br/>
 软件资源是由操作系统内核创建和维护的、用于支持程序运行的逻辑实体，如消息队列、信号量等。它们物理意义上不存在，但也占据一定的硬件资源。<br/>
 
+### 4.发展史
+历史不是简单的编年表，而是一条由核心需求（更高效地利用硬件、更方便地与人交互、更稳定地提供服务）驱动，并受限于或得益于当时硬件水平的逻辑链条。<br/>
+
+**1940s-50s：电子管时代，无操作系统**
+
+
+
+
+
 
