--- a/25.12/操作系统原理.md
+++ b/25.12/操作系统原理.md
@@ -40,7 +40,18 @@ OS的核心目标是高效管理硬件资源，为用户和应用程序提供稳
 ### 4.发展史
 历史不是简单的编年表，而是一条由核心需求（更高效地利用硬件、更方便地与人交互、更稳定地提供服务）驱动，并受限于或得益于当时硬件水平的逻辑链条。<br/>
 
-**1940s-50s：电子管时代，无操作系统**
+**1946-1955：电子管时代，无操作系统**
+手工操作阶段，由程序员提前在纸带上打好孔，然后装入纸带输入机。
+此时的计算机内存极小、不稳定。
+内存小，意味着计算机无法容纳一个常驻的“系统”，我们只能让人工来处理输入输出；
+不稳定，意味着机器频繁故障，需要人工干预。
+
+计算前，手工装入纸带或卡片；人工控制程序执行；计算完成后，手工卸取纸带或卡片。
+用户独占全机资源，在手工操作时，CPU一直在等待用户。再加上此时的计算机高速的cpu运算和低速的人工，导致CPU利用率极低。
+
+**
+
+
 
 
 
