--- a/25.12/操作系统原理.md
+++ b/25.12/操作系统原理.md
@@ -40,16 +40,89 @@ OS的核心目标是高效管理硬件资源，为用户和应用程序提供稳
 ### 4.发展史
 历史不是简单的编年表，而是一条由核心需求（更高效地利用硬件、更方便地与人交互、更稳定地提供服务）驱动，并受限于或得益于当时硬件水平的逻辑链条。<br/>
 
-**1946-1955：电子管时代，无操作系统**
-手工操作阶段，由程序员提前在纸带上打好孔，然后装入纸带输入机。
-此时的计算机内存极小、不稳定。
-内存小，意味着计算机无法容纳一个常驻的“系统”，我们只能让人工来处理输入输出；
-不稳定，意味着机器频繁故障，需要人工干预。
+**1946-1955：电子管时代，无操作系统**<br/>
+手工操作阶段，由程序员提前在纸带上打好孔，然后装入纸带输入机。<br/>
+此时的计算机内存极小、不稳定。<br/>
+内存小，意味着计算机无法容纳一个常驻的“系统”，我们只能让人工来处理输入输出；<br/>
+不稳定，意味着机器频繁故障，需要人工干预。<br/>
 
-计算前，手工装入纸带或卡片；人工控制程序执行；计算完成后，手工卸取纸带或卡片。
-用户独占全机资源，在手工操作时，CPU一直在等待用户。再加上此时的计算机高速的cpu运算和低速的人工，导致CPU利用率极低。
+计算前，手工装入纸带或卡片；人工控制程序执行；计算完成后，手工卸取纸带或卡片。<br/>
+用户独占全机资源，在手工操作时，CPU一直在等待用户。再加上此时的计算机高速的cpu运算和低速的人工，导致CPU利用率极低。<br/>
 
-**
+**1955-1965：晶体管时代，单道批处理系统**<br/>
+晶体管更小、更快、更可靠。出现了更快的磁芯内存和磁带作为外部存储。<br/>
+此时我们计算机的内存更大，足以容纳一个简单的监控程序，操作员事先将若干作业分组，称为一批作业，输入到输入设备上。这个程序可以按顺序读入每个作业并执行。<br/>
+这就是单道批处理系统。<br/>
+
+特征：批量性、自动性、顺序性、单道性。<br/>
+
+因为加入了监督程序，作业转换时间减少，系统运行效率提高。<br/>
+但是计算机的内存仍有限，在同一时刻，只允许存在一个用户作业并运行。<br/>
+虽然此时监控程序允许作业的自动切换，使得资源转换时间减少，但高速CPU还是会在低速I/O操作中等待。<br/>
+
+**1965-1980：集成电路时代，多道批处理系统、分时操作系统、实时操作系统**<br/>
+集成电路使计算机性能飙升。<br/>
+
+- 多道批处理系统：<br/>
+
+在内存中同时存放多道已开始运行且尚未结束的程序。它们交替运行，共享系统中的各种资源，从而使处理机得到充分利用。<br/>
+当某道程序因为某种原因（例如执行I/O操作时）不能继续运行而放弃CPU时，OS便调度另一程序投入运行。这样可以使CPU和外部设备尽量忙碌。<br/>
+
+特点：多道运行、宏观上并发、微观上串行。<br/>
+
+主存中会有两道及以上的程序在执行中；<br/>
+从宏观上看，它们在同时执行；<br/>
+从微观上看，它们在交替执行，因为在任一时刻，在一台处理机上只能执行一道程序的一条指令。 <br/>
+
+缺点：交互性差。<br/>
+
+只有在程序结束或中断时，才能与用户交互。<br/>
+
+- 分时操作系统：<br/>
+
+将处理机的运行时间分成很短的时间片，按时间片轮流将处理机分配给各联机终端使用。<br/>
+交互式地向系统提出命令请求。<br/>
+多个用户分享使用同一台计算机，系统接受每个用户的命令。<br/>
+采用时间片轮转方式处理服务请求。如果某用户在分配给它的时间片用完时仍未完成，则暂时中断，等待下一轮运行，并把处理机的控制权让给另一个终端用户使用。<br/>
+通过交互方式在终端上向用户显示结果。<br/>
+用户根据上步结果发出下道命令 。<br/>
+
+特点：<br/>
+多路性：多个用户同时使用一台计算机工作。共享系统资源，提高了资源利用率。<br/>
+及时性：用户能在很短时间内得到系统响应。<br/>
+独立性：各用户独立操作，互不干扰，好像独占主机。<br/>
+交互性：系统能及时对用户的操作进行响应，加快调试过程，缩短了周转时间。<br/>
+
+- 实时操作系统：<br/>
+
+指系统能及时响应外部事件的请求，在规定的时间内完成对该事件的处理，并控制所有实时任务协调一致地运行。<br/>
+计算机开始应用到军事、工业控制领域，对于准时可靠有着极高的要求。<br/>
+
+分类：（根据“错过截止期限”的容忍程度）<br/>
+硬实时操作系统：绝对不允许错过截止期限。错过期限意味着系统的完全失败，可能导致灾难性后果。<br/>
+软实时操作系统：尽可能不要错过截止期限。偶尔错过是可以接受的，只会导致服务质量下降，不会导致系统崩溃。<br/>
+
+特点：<br/>
+响应时间短：任务有明确和固定的时间约束，在一定范围之内必须作出响应。否则任务就会失败，有可能造成灾难性后果。<br/>
+系统可靠性高。<br/>
+
+**1980-至今：超大规模集成电路时代，微机操作系统、网络操作系统、分布式操作系统、嵌入式操作系统**<br/>
+硬件资源产生飞跃，微处理器出现，个人计算机革命爆发。人们更多考虑如何用好、管好、隔离好。<br/>
+
+衍生的分类：<br/>
+微机操作系统：小型化的计算机的操作系统，为单个用户提供丰富、友好的交互体验。<br/>
+网络操作系统：拥有网络功能的操作系统，支持进行基于网络协议的可靠的数据传输。<br/>
+分布式操作系统：什么是分布式系统？将大量的计算机组织在一起，通过网络进行连接。该操作系统管理 “通过网络连接的多台独立计算机” ，将它们虚拟成一台更强大的单一计算机给用户使用。用户感觉自己在用一台机器，但后台工作可能分布在多台机器上。<br/>
+嵌入式操作系统：什么是嵌入式系统？它们是一个大设备、装置或系统中的一部分，完成特定功能的软硬件系统。该操作系统是 “嵌入式环境下的专用计算机系统” 。这个系统通常只为完成特定的控制或处理任务而存在。<br/>
+
+
+
+
+
+
+
+
+
 
 
 
