--- a/25.12/操作系统原理.md
+++ b/25.12/操作系统原理.md
@@ -115,19 +115,52 @@ OS的核心目标是高效管理硬件资源，为用户和应用程序提供稳
 分布式操作系统：什么是分布式系统？将大量的计算机组织在一起，通过网络进行连接。该操作系统管理 “通过网络连接的多台独立计算机” ，将它们虚拟成一台更强大的单一计算机给用户使用。用户感觉自己在用一台机器，但后台工作可能分布在多台机器上。<br/>
 嵌入式操作系统：什么是嵌入式系统？它们是一个大设备、装置或系统中的一部分，完成特定功能的软硬件系统。该操作系统是 “嵌入式环境下的专用计算机系统” 。这个系统通常只为完成特定的控制或处理任务而存在。<br/>
 
+## 二.计算机和操作系统结构
+### 1.操作系统和用户的接口
+我们（用户和程序员）怎么使用操作系统？
+通过命令接口（用户）或程序接口（程序员）。
 
+**命令接口**<br/>
+联机接口(交互式)：使用系统提供的操作命令，交互地控制程序执行和管理计算机系统。如系统管理、环境设置、权限管理、文件管理等。<br/>
+脱机接口：以作业说明书的方式提交给系统(批方式）。执行过程中，用户无法干涉。<br/>
 
+**程序接口(系统调用)** <br/>
+这是操作系统为编程人员提供的唯一接口，编程人员利用系统调用，可以在程序中调用操作系统所提供的子功能。程序级接口只能在高级语言或汇编语言中作为函数和过程被调用。<br/>
 
+**命令解释系统**<br/>
+也叫做shell(外壳)，是OS的重要组件之一，它读入用户的输入或者文件中的命令并运行。通常转换为一个或者多个系统调用。<br/>
 
+有的是在内核中。<br/>
+有的则将它作为一个特殊程序，当作业开始或者分时系统中用户登陆时，它运行。如：Unix。<br/>
 
+工作流程<br/>
+接收命令：从终端（命令行界面）或脚本文件中读取用户输入的命令。<br/>
+解释命令：分析命令字符串，识别命令名、参数、选项和重定向等特殊符号。<br/>
+执行命令：<br/>
+如果是内部命令（built-in command）：由Shell自身直接执行（如 cd, exit）。<br/>
+如果是外部命令：在文件系统中查找对应的可执行程序文件（如 ls, grep），然后通过系统调用（如 fork() + exec()）创建新进程来执行它。<br/>
 
+### 2.系统调用
+应用程序如何安全地请求操作系统内核提供服务？<br/>
 
+宏观过程：<br/>
+应用程序在用户态调用系统调用库函数（如 write()）。<br/>
+库函数通过陷入指令（如 int 0x80, syscall）触发一个软中断/异常。<br/>
+CPU从用户态切换至内核态，并跳转到预设的中断处理程序（即系统调用总入口）。<br/>
+内核根据系统调用号查找系统调用表，执行对应的内核服务例程。<br/>
+执行完毕，返回结果，并从内核态切换回用户态，应用程序继续执行。<br/>
 
+微观过程：<br/>
+设置系统调用号和参数。调用号作为指令的一部分，或装入到特定寄存器里（如：DOS的 int 21H，AH=调用号）。<br/>
+参数装入到特定寄存器里，或内存区域。<br/>
+执行trap(INT)指令：入口的一般性处理，查入口跳转表，跳转到相应功能的过程。<br/>
+保护CPU现场(将PC与PSW入栈)，改变CPU执行状态（处理机状态字PSW切换，地址空间表切换）。<br/>
+将参数取到核心空间。<br/>
+执行操作系统内部代码；<br/>
+执行iret指令：将执行结果装入适当位置，恢复CPU现场（以栈顶内容置PSW和PC）。<br/>
 
+中断是CPU外部的执行流程的事件（异步）<br/>
+陷入是CPU内部执行流程的事件（同步）<br/>
 
-
-
-
-
-
+### 3.操作系统结构
 
