--- a/25.12/操作系统原理.md
+++ b/25.12/操作系统原理.md
@@ -117,8 +117,8 @@ OS的核心目标是高效管理硬件资源，为用户和应用程序提供稳
 
 ## 二.计算机和操作系统结构
 ### 1.操作系统和用户的接口
-我们（用户和程序员）怎么使用操作系统？
-通过命令接口（用户）或程序接口（程序员）。
+我们（用户和程序员）怎么使用操作系统？<br/>
+通过命令接口（用户）或程序接口（程序员）。<br/>
 
 **命令接口**<br/>
 联机接口(交互式)：使用系统提供的操作命令，交互地控制程序执行和管理计算机系统。如系统管理、环境设置、权限管理、文件管理等。<br/>
