--- a/25.12/操作系统原理.md
+++ b/25.12/操作系统原理.md
@@ -125,7 +125,8 @@ OS的核心目标是高效管理硬件资源，为用户和应用程序提供稳
 脱机接口：以作业说明书的方式提交给系统(批方式）。执行过程中，用户无法干涉。<br/>
 
 **程序接口(系统调用)** <br/>
-这是操作系统为编程人员提供的唯一接口，编程人员利用系统调用，可以在程序中调用操作系统所提供的子功能。程序级接口只能在高级语言或汇编语言中作为函数和过程被调用。<br/>
+这是操作系统为编程人员提供的唯一接口，编程人员利用系统调用，可以在程序中调用操作系统所提供的子功能。<br/>
+程序级接口只能在高级语言或汇编语言中作为函数和过程被调用。<br/>
 
 **命令解释系统**<br/>
 也叫做shell(外壳)，是OS的重要组件之一，它读入用户的输入或者文件中的命令并运行。通常转换为一个或者多个系统调用。<br/>
@@ -253,6 +254,31 @@ CPU如何知道当前运行的是操作系统还是一般应用软件？<br/>
 途径：设置PSW(修改程序状态字)<br/>
 
 ## 三.进程
+### 1.概述
+定义：进程是程序的一次执行过程，它是动态的、独立的、并发的、异步的。<br/>
+
+程序是磁盘上的静态的永久文件，进程是动态的暂时过程。<br/>
+
+描述：进程 = 代码段 + 数据段 + PCB<br/>
+PCB（Process Control Block），是操作系统内核中为每个进程维护的一个数据结构。它包含了操作系统管理该进程所需的所有信息。<br/>
+
+### 2.进程的状态  
+**进程的五个状态**<br/>
+就绪态（Ready）：进程已具备运行条件，只等CPU空闲（等待调度器选中）。位于“就绪队列”中。<br/>
+执行态（Running）：进程正在CPU上执行指令。<br/>
+等待态(阻塞态，waiting，Blocked）：进程因等待某个事件（如I/O完成、信号量）而无法继续执行。即使CPU空闲，它也不能运行。位于“等待队列”中。<br/>
+新建状态(new)：刚刚创建的进程，辅存中。<br/>
+终止（退出状态，Exit)：终止后进程移入该状态，它不再有执行资格。<br/>
+
+**状态转移**<br/>
+运行 → 阻塞：进程主动请求一个暂时无法满足的资源（如read()系统调用等待键盘输入）。<br/>
+运行 → 就绪：1）时间片用完（被时钟中断强行切换）；2）被更高优先级进程抢占。<br/>
+阻塞 → 就绪：等待的事件发生了（如I/O完成，通过中断通知OS）。<br/>
+就绪 → 运行：被调度器选中，称为派发。<br/>
+
+
+
+
 
 
 
