--- a/26.1/计算机网络.md
+++ b/26.1/计算机网络.md
@@ -64,26 +64,46 @@
 #### OSI七层模型
 国际标准化组织（ISO）正式发布的理想模型，由七层构成。
 
-层次	名称	功能	数据单位
-7 应用层 为应用程序提供网络服务接口 报文
-6 表示层 翻译、加密、压缩。解决不同系统之间的数据格式差异 报文
-5 会话层 建立、管理、终止应用进程之间的“会话” 报文
-4 传输层 提供端到端的可靠或不可靠的数据传输 报文段
-3 网络层 选择合适的路由，把分组从源主机传送到目的主机 数据包
-2 数据链路层 提供相邻节点间的可靠帧传输 帧
-1 物理层 在物理介质上透明传输原始比特流 比特
+|层次	|名称	|功能	|数据单位|
+|:----|:----|:----|:----|
+|7 |应用层 |为应用程序提供网络服务接口| 报文|
+|6 |表示层 |翻译、加密、压缩。解决不同系统之间的数据格式差异 |报文|
+|5 |会话层 |建立、管理、终止应用进程之间的“会话” |报文|
+|4 |传输层 |提供端到端的可靠或不可靠的数据传输 |报文段|
+|3 |网络层 |选择合适的路由，把分组从源主机传送到目的主机 |数据包|
+|2 |数据链路层 |提供相邻节点间的可靠帧传输 |帧|
+|1 |物理层 |在物理介质上透明传输原始比特流 |比特|
 
 #### TCP/IP参考模型
-TCP/IP协议是ARPANET和因特网上使用的一组协议，是一个协议簇。
-TCP/IP起源于美国国防部高级研究规划署(DARPA)的一项研究计划——实现若干台主机的相互通信。
+TCP/IP协议是ARPANET和因特网上使用的一组协议，是一个协议簇。</br>
+TCP/IP起源于美国国防部高级研究规划署(DARPA)的一项研究计划——实现若干台主机的相互通信。</br>
 
+|层次 |名称 |核心职责 |关键协议 |关键设备 |
+|:----|:----|:----|:----|:----|
+|5 |应用层	|融合了OSI不常用的应用、表示、会话三层功能，直接面向用户进程。 |HTTP (Web)、DNS (解析)、SMTP (邮件)、FTP (文件) |主机|
+|4 |传输层	|与OSI传输层完全对应。提供端到端通信。 |TCP (可靠连接)、UDP (高效无连接)	|主机|
+|3 |网络层	|与OSI网络层完全对应。负责IP寻址和路由。	|IP (核心)、ICMP (控制消息)、路由协议	|路由器|
+|2 |数据链路层	|融合了OSI的数据链路层功能。负责局域网内帧传输。 |以太网、Wi-Fi、PPP	|交换机、网桥|
+|1 |物理层	|与OSI物理层对应。|双绞线、光纤、无线电波 |集线器、中继器、网卡|
 
-层次	名称	核心职责	关键协议	关键设备
-5	应用层	融合了OSI不常用的应用、表示、会话三层功能，直接面向用户进程。	HTTP (Web)、DNS (解析)、SMTP (邮件)、FTP (文件)	主机
-4	传输层	与OSI传输层完全对应。提供端到端通信。	TCP (可靠连接)、UDP (高效无连接)	主机
-3	网络层	与OSI网络层完全对应。负责IP寻址和路由。	IP (核心)、ICMP (控制消息)、路由协议	路由器
-2	数据链路层	融合了OSI的数据链路层功能。负责局域网内帧传输。	以太网、Wi-Fi、PPP	交换机、网桥
-1	物理层	与OSI物理层对应。双绞线、光纤、无线电波	集线器、中继器、网卡
+#### 封装与解封装
+1. 发送过程：封装</br>
+数据从上到下传递，每层加上本层的控制信息（头部）。</br>
+以通过HTTP访问网站为例：</br>
+应用层：浏览器生成一个 HTTP请求报文。内容：GET /index.html ...</br>
+传输层：收到HTTP报文。加上TCP头部（包含源端口、目的端口80、序列号等），形成 TCP报文段。</br>
+网络层：收到TCP报文段。加上IP头部（包含源IP地址、目标IP地址等），形成 IP数据包。</br>
+数据链路层：收到IP数据包。加上以太网头部和尾部（包含源MAC地址、目标MAC地址、差错校验等），形成 以太网帧。</br>
+物理层：将帧转换成 比特流，通过网线/无线电波发送出去。</br>
+
+2. 接收过程：解封装</br>
+数据从下到上传递，每层读取并剥离对等层的头部。</br>
+过程与发送完全相反：</br>
+物理层：收到比特流，重组为 帧。</br>
+数据链路层：读取帧头部，如果目标MAC地址匹配，则剥离帧头和帧尾，将内部的 IP数据包 上交网络层。</br>
+网络层：读取IP头部，如果目标IP地址匹配，则剥离IP头，将内部的 TCP报文段 上交传输层。</br>
+传输层：读取TCP头部，根据端口号找到对应的应用程序，剥离TCP头，将 HTTP请求报文 上交应用层。</br>
+应用层：Web服务器程序（如Nginx）解析HTTP报文，生成响应，开始新一轮的封装发送。</br>
 
 
 
