--- a/26.1/数据库原理.md
+++ b/26.1/数据库原理.md
@@ -1,11 +1,51 @@
 # 数据库原理
 ## 一.基本概念
 ### 1.数据
-数据库存储的基本对象，能够数字化，包括但不限于文本、图像、音视频。
+数据库存储的基本对象，能够输入计算机并能被计算机程序识别和处理的符号集合，包括但不限于文本、图像、音视频。<br/>
 
 ### 2.数据库
-数据库是长期存储在计算机内、有组织的、可共享的大量的数据集合。
-数据库中的数据按照一定的数据模型组织、描述和保存，具有较小的冗余度、较高的数据独立性和易扩展性。
+数据库是长期存储在计算机内、有组织的、可共享的大量的数据集合。<br/>
+数据库中的数据按照一定的数据模型组织、描述和保存，具有较小的冗余度、较高的数据独立性和易扩展性。<br/>
 
 ### 3.数据库管理系统
-DBMS，即Data Base Management System，是位于用户和操作系统之间的
+DBMS，即Data Base Management System，是位于用户和操作系统之间的支撑软件，用来帮助软件高效运行。<br/>
+
+#### 主要功能
+1.数据库定义功能（DDL）<br/>
+2.数据库操纵功能（DML）<br/>
+4.数据库的运行管理与控制功能（DCL）<br/>
+5.数据库与程序的应用接口支持<br/>
+
+### 4.数据库系统
+#### 定义
+DBS，即Data Base System，是数据库、数据库管理系统、应用程序、DBA（Data Base Administrator，数据库管理员）、计算机系统平台（包括硬件、操作系统、网络系统等）的集合。<br/>
+
+#### 发展阶段
+1.人工管理阶段<br/>
+计算机主要用于科学计算，没有磁盘设备。<br/>
+2.文件系统阶段<br/>
+磁带、磁盘、操作系统、高级语言的出现，让数据存储成为可能。<br/>
+3.数据库系统阶段<br/>
+1970年E.F.Codd 提出关系数据模型。独立的、有组织的、共享的数据存储模式成为可能。<br/>
+
+#### 特点
+1.数据的结构化：采用一定的数据模型。<br/>
+2.数据的共享性高、冗余度低、易扩展：可被多人访问、数据库中同一数据会尽可能少的存储副本、可以简单地增加或减少数据。<br/>
+3.数据地独立性高<br/>
+物理独立性：应用程序与磁盘上数据库中的数据是相互独立的。<br/>
+逻辑独立性：应用程序与磁盘上数据库中的逻辑结构是相互独立的。<br/>
+4.数据由DBMS统一管理<br/>
+5.数据的最小存取单元是数据项<br/>
+
+#### 三级模式/三级体系结构
+1.外模式：也称子模式或用户模式或视图层，数据库中对用户不透明的部分。<br/>
+2.模式：也称逻辑模式或逻辑层，是数据库中全体数据的逻辑结构和特征的描述。<br/>
+3.内模式：也称存储模式或物理层，是数据库物理结构和存储方式的描述。<br/>
+
+#### 两级映像
+1.外模式/模式映像<br/>
+定义了外模式与模式之间的对应关系，当模式改变时，映像关系会相应改变，以保证外模式保持不变。<br/>
+保证了逻辑独立性。<br/>
+2.模式/内模式映像<br/>
+定义了模式与内模式之间的对应关系，当数据库的存储结构改变时，映像关系会相应改变，以保证模式保持不变。<br/>
+保证了物理独立性。<br/>
