--- a/25.12/人工智能导论.md
+++ b/25.12/人工智能导论.md
@@ -194,7 +194,7 @@ if  条件  then  行动 或 if  前提  then  结论<br/>
 初始状态：任意乱局<br/>
 行动：将空白格与相邻数字交换<br/>
 目标测试：布局是否为 1 2 3; 4 5 6; 7 8 _<br/>
-代价：每移动一步代价为1<br/>v
+代价：每移动一步代价为1<br/>
 
 ### 4.2 无信息搜索（盲目搜索）
 广度优先搜索（BFS）：<br/>
@@ -211,7 +211,7 @@ if  条件  then  行动 或 if  前提  then  结论<br/>
 
 贪婪最佳优先搜索：<br/>
 策略：总是扩展当前看来离目标最近的节点，即 h(n) 最小的节点<br/>
-缺点：贪心，目光短浅，不保证最优，可能被误导<br/><br/>
+缺点：贪心，目光短浅，不保证最优，可能被误导<br/>
 
 A*搜索：<br/>
 策略：综合考量"已花费代价"和"预计剩余代价"。定义评估函数 f(n) = g(n) + h(n<br/>
